cabal-version:      3.4

name:               AOC2024

version:            0.1.0.0

build-type:         Simple

common warnings
    ghc-options: -Wall

executable AOC2024
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Common
        Vec2
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
        Day08
        Day09
        Day10
        Day11
        Day12
        Day13
        Day14
        Day15
        Day16
        Day17
        Day18
        Day19
        Day20

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    
        base        ^>=4.17.2.1,
        containers  ^>=0.6.7,
        time        ^>=1.12.2,
        regex-tdfa  ^>=1.3.2

    -- Directories containing source files.
    hs-source-dirs:   exe

    -- Base language which the package is written in.
    default-language: GHC2021
